# lvgl-desktop

./: Makefile  README.md  lv_conf.h  main.c
lv_drivers/: lv_drv_conf.h
lvgl/: component.mk
my_app/: CMakeLists.txt  lv_100ask.h  my_app.mk
my_app/my_QRcode_app/: my_QRcode_app.c  my_QRcode_app.h
my_app/my_about_app/: my_about_app.c  my_about_app.h
my_app/my_calc_app/: my_calc_app.c  my_calc_app.h
my_app/my_clock_app/: my_clock_app.c  my_clock_app.h
my_app/my_clock_app/assets/: img_hand.c
my_app/my_desktop/: my_desktop.c  my_desktop.h
my_app/my_desktop/assets/: my_icon_2048.c  my_icon_QRcode.c  my_icon_about_us.c  my_icon_calc.c  my_icon_camera.c  my_icon_data.c  my_icon_floder.c  my_icon_humiture.c  my_icon_music.c  my_icon_regbit.c  my_icon_setting.c  my_icon_snake.c  my_icon_tetris.c  my_icon_widgets.c
my_app/my_music_app/: my_music_app.c  my_music_app.h
my_app/my_music_app/assets/: music_bg.c
my_app/my_settings_app/: my_settings_app.c  my_settings_app.h
my_app/my_temp_app/: my_temp_app.c  my_temp_app.h
my_app/my_temp_app/assets/: temp_indicator.c
my_app/my_widget_app/: my_widget_app.c  my_widget_app.h
